--- a/static/style.css
+++ b/static/style.css
@@ -1616,7 +1616,7 @@ body.up_page {
   margin: 0 auto;
   padding: 0; /* Убираем внутренний отступ */
   border-radius: 10px; /* Округление только для общего контейнера */
-  margin-top: 100px;
+  margin-top: 50px;
   background-color: #4a3228; /* Общий фон */
   overflow: hidden; /* Для корректного отображения границ */
   border: 2px solid #d1a34a; /* Обводка контейнера */
@@ -1708,15 +1708,60 @@ body.up_page {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     max-width: 400px;
     width: 90%;
-    height: 700px;
-    position: fixed;
-    bottom: 20px;
+    height: 500px; /* Измените высоту здесь */
+    position: absolute;
+    bottom: 120px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 999;
-    position: absolute;
 }
 
+/* Общие стили окна */
+.container_up_buy_2 {
+    text-align: center;
+    background-color: #35292a;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    width: 90%;
+    height: 500px; /* Измените высоту здесь */
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
+.container_up_buy_3 {
+    text-align: center;
+    background-color: #35292a;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    width: 90%;
+    height: 500px; /* Измените высоту здесь */
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
+.container_up_buy_4 {
+    text-align: center;
+    background-color: #35292a;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    width: 90%;
+    height: 500px; /* Измените высоту здесь */
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
 /* Слой затемнения */
 .overlay {
     position: fixed;
@@ -1741,7 +1786,42 @@ body.up_page {
     z-index: 1000;
     transition: transform 0.3s ease;
 }
-
+.close-button_2 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+    transition: transform 0.3s ease;
+}
+.close-button_3 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+    transition: transform 0.3s ease;
+}
+.close-button_4 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+    transition: transform 0.3s ease;
+}
 .close-button:hover {
     transform: scale(1.2);
 }
@@ -1754,8 +1834,10 @@ body.up_page {
 .top-image img {
     max-width: 200px;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto; /* Центрирование изображения */
+    margin-bottom: -150px; /* Установите нужный отступ снизу */
 }
+
 
 /* Монета слева от текста */
 .price_up_buy {
@@ -1778,7 +1860,7 @@ body.up_page {
 .character_up_buy {
     width: 150px;
     height: 150px;
-    margin: 0 auto 20px;
+    margin: 0 auto 0px;
     background: url('character.png') no-repeat center center;
     background-size: contain;
 }
@@ -1787,14 +1869,14 @@ body.up_page {
     font-size: 24px;
     line-height: 1.5;
     font-weight: bold;
-    margin: 0px 0;
+    margin: 10px 0; /* Установите небольшой верхний отступ для поднятия заголовка */
 }
 
 .description {
     font-size: 16px;
     line-height: 1.5;
     color: #c0c0c0;
-    margin-bottom: 20px;
+    margin: 5px 0; /* Установите небольшой верхний отступ, если необходимо */
 }
 
 .upgrade-button {
