--- a/templates/page3.html
+++ b/templates/page3.html
@@ -51,109 +51,40 @@
     </div>
 </div>
 
+<div class = "spec">Спец предложения дня</div>
 
-
-<div class="box_1" id="box1">
-    <img src="/static/images/box_1.png" width="80" class="box1">
-    <span class="text_box1">Сундук героя</span>
-    <br>
-    <span class="text_box11">Здесь вы можете получить <br> нового персонажа</span>
-    <div class="coin_container">
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">10000</span>
+<div class="shop_container">
+<div class="shop_box">
+    <div class="shop_icon">
+        <img src="/static/images/box_1.png" alt="Сундук">
+    </div>
+    <h1>Сундук героя</h1>
+    <h2>здесь новый перс</h2>
+    <div class="shop_price">
+        <img src="/static/images/coin.png" alt="coin"> <span>10000</span>
     </div>
 </div>
-
-<!-- Меню сундука -->
-<div class="fullscreen_menu" id="click_box" style="display: none;">
-    <div class="menu_content">
-        <h2>Сундук героя</h2>
-        <img src="/static/images/box_1.png" alt="Ящик" class="menu_box_image">
-        <div class="coin_display">
-            <span class="coin_text_2">1000</span>
-            <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
+<div class="shop_box_2">
+    <div class="shop_icon">
+        <img src="/static/images/box_1.png" alt="Сундук">
+    </div>
+    <h1>Сундук героя</h1>
+    <h2>здесь новый перс</h2>
+    <div class="shop_price">
+        <img src="/static/images/stars.png" alt="coin"> <span>100</span>
         </div>
-        <button id="buyButton1" class="buy_box">Купить</button>
-        <button id="closeBoxButton" class="close_button">Закрыть</button>
     </div>
 </div>
 
-<!-- Меню с выпавшими предметами -->
-<div class="rewards_menu" id="rewardsMenu" style="display: none;">
-    <div class="rewards_content">
-        <h2>Вы получили:</h2>
-        <div id="rewardsItems">
-            <!-- Здесь появится один выпавший предмет -->
+<div class="menu-container_scroll">
+        <div class="menu_scroll">
+            <img src="/static/images/box_1.png" alt="Изображение 1">
+            <img src="/static/images/box_2.png" alt="Изображение 2">
+            <img src="/static/images/box_3.png" alt="Изображение 3">
+            <img src="/static/images/box_4.png" alt="Изображение 4">
+            <!-- Добавьте другие изображения по желанию -->
         </div>
-        <button id="closeRewardsButton" class="close_button">Закрыть</button>
     </div>
-</div>
-
-
-<div class="box_2" id="box2">
-    <img src="/static/images/box_2.png" width="80" class="box2">
-    <span class="text_box2">Ящик инструментов</span>
-    <br>
-    <span class="text_box22">Здесь вы можете выбить <br> полезные предметы </span>
-    <div class="coin_container">
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">30000</span>
-    </div>
-</div>
-
-<!-- Скрытое меню для второго ящика -->
-<div class="menu" id="menu2" style="display: none;">
-    <img src="/static/images/box_2.png" alt="Ящик" class="menu_box_image">
-    <div class="coin_display">
-        <span class="coin_text">1000</span>
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-    </div>
-    <button id="buyButton2" class="buy_button">Купить</button>
-</div>
-</div>
-
-<div class="box_3" id="box3">
-    <img src="/static/images/box_3.png" width="80" class="box3">
-    <span class="text_box3">Ящик Пандоры</span>
-    <br>
-    <span class="text_box33"> Древний таинственный сундук</span>
-    <div class="coin_container">
-        <img src="/static/images/stars.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">100</span>
-    </div>
-</div>
-
-<!-- Скрытое меню для третьего ящика -->
-<div class="menu" id="menu3" style="display: none;">
-    <img src="/static/images/box_3.png" alt="Ящик" class="menu_box_image">
-    <div class="coin_display">
-        <span class="coin_text">100</span>
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-    </div>
-    <button id="buyButton3" class="buy_button">Купить</button>
-</div>
-
-
-<div class="box_4" id="box4">
-    <img src="/static/images/box_4.png" width="80" class="box4">
-    <span class="text_box4">Сундук Бездны</span>
-    <br>
-    <span class="text_box44">Самый редкий сундук <br> во вселенной</span>
-    <div class="coin_container">
-        <img src="/static/images/stars.png" width="20" alt="Монета" class="coin_icon">
-        <span class="coin_text">300</span>
-    </div>
-</div>
-
-<!-- Скрытое меню для четвертого ящика -->
-<div class="menu" id="menu4" style="display: none;">
-    <img src="/static/images/box_4.png" alt="Ящик" class="menu_box_image">
-    <div class="coin_display">
-        <span class="coin_text">1000</span>
-        <img src="/static/images/coin.png" width="20" alt="Монета" class="coin_icon">
-    </div>
-    <button id="buyButton4" class="buy_button">Купить</button>
-</div>
 
 
 
