--- a/templates/page2.html
+++ b/templates/page2.html
@@ -7,11 +7,6 @@
 </head>
 <body class="friends-page"> <!-- Добавлен класс friends-page -->
 
-<div class="friends_6">
-    <h1>Приглашай друзей</h1>
-    <p>и получай 5% дохода с их покупок</p>
-</div>
-
 <div class="invite-container">
     <div class="coin-stack">
         <img src="/static/images/coin.png" alt="Coins" class="coins">
@@ -24,9 +19,7 @@
         </div>
     </div>
 </div>
- <div class="link">
-      <div class="link_text">Доход с друзей: 0</div>
-    </div>
+
 
 <div class="up_text">
     <p>Список ваших друзей</p>
@@ -46,6 +39,26 @@
       <div class="friend-info">Ник - уровень</div>
     </div>
   </div>
+
+
+<div class="invitation-container">
+  <div class="header">
+    <h1>Ваши друзья</h1>
+    <h2 class="friends-count">0 ДРУЗЕЙ</h2>
+    <button class="how-it-works">Доход с друзей</button>
+  </div>
+
+<div class="referral-text">
+    Вы получите 5000 монет за каждого друга, а также 5% дохода с его покупок. Приглашай друзей и зарабатывай деньги!
+</div>
+  <div class="referral-icons">
+    <div class="icon">
+      <img src="/static/images/cot.png" alt="Пользователь">
+    </div>
+  </div>
+</div>
+
+
 
     <script src="{{ url_for('static', filename='script_theme.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
