--- a/templates/page8.html
+++ b/templates/page8.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<div class="up_text">
+<div class="up_text_top">
     <p>Топ игроков</p>
 </div>
 
