--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -9,6 +9,25 @@
 </head>
 <body class="up_page">
 
+<nav class="shop_menu">
+        <ul>
+            <li class="shop_menu-item">
+                <a href="/page3">Особое</a>
+            </li>
+            <li class="shop_menu-item">
+                <a href="/page6">Герои</a>
+            </li>
+            <li class="shop_menu-item">
+                <a href="/upgrade">Улучшения</a>
+            </li>
+            <li class="shop_menu-item">
+                <a href="#">Инвентарь</a>
+            </li>
+        </ul>
+    </nav>
+
+
+
 <div class="container_up">
   <div class="item_up">
     <div class="item-icon">🤖</div>
@@ -164,18 +183,6 @@
         </div>
         <button class="upgrade-button">УЛУЧШИТЬ</button>
     </div>
-</div>
-
-<div class="menu_p3">
-    <a href="/page3" class="item">
-        <button class="menu-button">Ящики</button>
-    </a>
-    <a href="/page6" class="item">
-        <button class="menu-button">Герои</button>
-    </a>
-    <a href="/upgrade" class="item">
-        <button class="menu-button">Улучшения</button>
-    </a>
 </div>
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
